--- a/technologies/webmodule-ee.yaml
+++ b/technologies/webmodule-ee.yaml
@@ -10,7 +10,7 @@ requests:
   - method: GET
     path:
       - "{{BaseURL}}/webmodule-ee/login.seam"
-
+    matchers-condition: and
     matchers:
       - type: word
         words:
