--- a/default-logins/aem/adobe-aem-default-credentials.yaml
+++ b/default-logins/aem/adobe-aem-default-credentials.yaml
@@ -35,7 +35,7 @@ requests:
         - password
         - password
 
-    attack: clusterbomb  # Available options: sniper, pitchfork and clusterbomb
+    attack: pitchfork  # Available options: sniper, pitchfork and clusterbomb
 
     raw:
       - |
