--- a/default-logins/guacamole/guacamole-default-login.yaml
+++ b/default-logins/guacamole/guacamole-default-login.yaml
@@ -30,6 +30,7 @@ requests:
       - type: word
         words:
           - 'application/json'
+        part: header
 
       - type: status
         status:
