--- a/file/keys/twitter-secret.yaml
+++ b/file/keys/twitter-secret.yaml
@@ -2,7 +2,7 @@ id: twitter-secret
 
 info:
   name: Twitter Secret
-  author: gaurang
+  author: gaurang,daffainfo
   severity: medium
   tags: token,file
 
@@ -13,4 +13,4 @@ file:
     extractors:
       - type: regex
         regex:
-          - "(?i)twitter(.{0,20})?[0-9a-z]{35,44}"
+          - "[1-9][0-9]+-[0-9a-zA-Z]{40}"
