--- a/dns/cname-service-detection.yaml
+++ b/dns/cname-service-detection.yaml
@@ -1,7 +1,7 @@
-id: cname-service-detector
+id: cname-service-detection
 
 info:
-  name: 3rd party service checker
+  name: cname service detection
   author: pdteam
   severity: info
   tags: dns
@@ -12,13 +12,20 @@ dns:
     class: inet
     recursion: true
     retries: 5
+
     matchers-condition: or
     matchers:
       - type: word
         name: zendesk
         words:
           - "zendesk.com"
+
       - type: word
         name: github
         words:
           - "github.io"
+
+      - type: word
+        name: announcekit
+        words:
+          - "cname.announcekit.app"
